data-aggregation/protected/tests/fixtures/tblavlostdead.php
<?php

 return  array(
     
          // error
          array("clinicid" => 1, "status" => 'lost',"lddate" =>'2008-10-10',"av_id" => 1, "id" => 1),
          array("clinicid" => 1, "status" => 'dead',"lddate" =>'2008-10-11',"av_id" => 1, "id" => 1),
          array("clinicid" => 1, "status" => 'lost',"lddate" =>'2008-10-12',"av_id" => 1, "id" => 1),
     
          // error
          array("clinicid" => 2, "status" => 'dead',"lddate" =>'2008-10-10',"av_id" => 2, "id" => 1),
          array("clinicid" => 2, "status" => 'lost',"lddate" =>'2008-10-11',"av_id" => 2, "id" => 1),
          array("clinicid" => 2, "status" => 'lost',"lddate" =>'2008-10-12',"av_id" => 2, "id" => 1),
     
          // ok
          array("clinicid" => 3, "status" => 'lost',"lddate" =>'2008-10-10',"av_id" => 3, "id" => 1),
          array("clinicid" => 3, "status" => 'lost',"lddate" =>'2008-10-11',"av_id" => 3, "id" => 1),
          array("clinicid" => 3, "status" => 'lost',"lddate" =>'2008-10-12',"av_id" => 3, "id" => 1),
          
          // error
          array("clinicid" => 4, "status" => 'dead',"lddate" =>'2008-10-11',"av_id" => 4, "id" => 1),
          array("clinicid" => 4, "status" => 'lost',"lddate" =>'2008-10-12',"av_id" => 4, "id" => 1),
          array("clinicid" => 4, "status" => 'dead',"lddate" =>'2008-10-13',"av_id" => 4, "id" => 1),
          array("clinicid" => 4, "status" => 'lost',"lddate" =>'2008-10-14',"av_id" => 4, "id" => 1),
          
          // error
          array("clinicid" => 5, "status" => 'lost',"lddate" =>'2008-10-11',"av_id" => 5, "id" => 1),
          array("clinicid" => 5, "status" => 'dead',"lddate" =>'2008-10-12',"av_id" => 5, "id" => 1),
          array("clinicid" => 5, "status" => 'dead',"lddate" =>'2008-10-13',"av_id" => 5, "id" => 1),
          array("clinicid" => 5, "status" => 'lost',"lddate" =>'2008-10-14',"av_id" => 5, "id" => 1),
          
          
          array("clinicid" => 6, "status" => 'lost',"lddate" =>'2008-10-11',"av_id" => 6, "id" => 1),
          array("clinicid" => 6, "status" => 'lost',"lddate" =>'2008-10-12',"av_id" => 6, "id" => 1),
          array("clinicid" => 6, "status" => 'dead',"lddate" =>'2008-10-13',"av_id" => 6, "id" => 1),
          
          
  );